unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_APS_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_APS_Notes__c</fullName>
    <label>APS Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>