unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Auto_process_Complete__c.field-meta.xml
<CustomField>
    <fullName>sked_Auto_process_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-process Complete</label>
    <type>Checkbox</type>
</CustomField>