unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Denied_Reason__c</fullName>
    <label>Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied (hours)</fullName>
            </value>
            <value>
                <fullName>Denied (role)</fullName>
            </value>
            <value>
                <fullName>Denied (travel distance)</fullName>
            </value>
            <value>
                <fullName>Denied (cutoff days)</fullName>
            </value>
            <value>
                <fullName>Denied (cancelled)</fullName>
            </value>
            <value>
                <fullName>Denied (duplicate)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>