unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Designated_Approver__c.field-meta.xml
<CustomField>
    <fullName>sked_Designated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Drive_Shift_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>