unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_GuaranteedMinHrsForfeited_Requester__c.field-meta.xml
<CustomField>
    <fullName>sked_GuaranteedMinHrsForfeited_Requester__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Guaranteed Minimum Hours Forfeited (Requesting Staff)</inlineHelpText>
    <label>Guaranteed Min Hrs Forfeited (Requester)</label>
    <type>Checkbox</type>
</CustomField>