unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Is_One_Side_Trade__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_One_Side_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is One Side Trade</label>
    <type>Checkbox</type>
</CustomField>