unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Reason_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Reason_Approval_Required__c</fullName>
    <label>Reason Approval Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shift Trade doesn&#39;t meet cutoff requirements</fullName>
            </value>
            <value>
                <fullName>Requesting User exceeds Max Hours per week</fullName>
            </value>
            <value>
                <fullName>Requesting User unqualified</fullName>
            </value>
            <value>
                <fullName>Requesting User has a TAT Contention</fullName>
            </value>
            <value>
                <fullName>Requesting User Drive is part of Linked Drive</fullName>
            </value>
            <value>
                <fullName>Trading User exceeds Max Hours per week</fullName>
            </value>
            <value>
                <fullName>Trading User unqualified</fullName>
            </value>
            <value>
                <fullName>Trading User has a TAT Contention</fullName>
            </value>
            <value>
                <fullName>Trading User Drive is part of Linked Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>