unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requester_Relocated_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>sked_Requester_Relocated_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>.</description>
    <label>Requester Relocated Acknowledge</label>
    <type>Checkbox</type>
</CustomField>