unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requester_Unavailable_For_CO_Ack__c.field-meta.xml
<CustomField>
    <fullName>sked_Requester_Unavailable_For_CO_Ack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>.</description>
    <label>Requester Unavailable For CO Acknowledge</label>
    <type>Checkbox</type>
</CustomField>