unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Drive_Type__c</fullName>
    <formula>TEXT(sked_Requesting_Staff_Drive__r.sked_Type_of_Drive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Staff Drive Type</label>
    <type>Text</type>
</CustomField>