unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Event_Start_Time__c</fullName>
    <formula>IF( ISPICKVAL(sked_Requesting_Staff_Trading_Type__c, &#39;Drive Shift&#39;), 
sked_Requesting_Staff_Drive__r.sked_Start_Time__c,
sked_Requesting_Staff_NCE__r.sked_Start_Time__c
)</formula>
    <label>Requesting Staff Event Start Time</label>
    <type>Time</type>
</CustomField>