unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_NCE__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_NCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Staff NCE</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Drive Shift Trades</relationshipLabel>
    <relationshipName>sked_Drive_Shift_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>