unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Trade_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Trade_Reason__c</fullName>
    <label>Requesting Staff Trade Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>