unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Trading_Avail_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Trading_Avail_Date__c</fullName>
    <label>Requesting Staff Trading Available Date</label>
    <type>Date</type>
</CustomField>