unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Trading_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Trading_Event_Date__c</fullName>
    <formula>IF( ISPICKVAL(sked_Requesting_Staff_Trading_Type__c, &#39;Drive Shift&#39;),
sked_Requesting_Staff_Drive__r.sked_Drive_Date__c,
sked_Requesting_Staff_NCE__r.sked_Start_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Staff Trading Event Date</label>
    <type>Date</type>
</CustomField>