unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_Trading_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_Trading_Event_Name__c</fullName>
    <description>.</description>
    <formula>CASE(TEXT(sked_Requesting_Staff_Trading_Type__c),
&#39;Drive Shift&#39;, sked_Requesting_Staff_Drive_Name__c,
&#39;Activity&#39;, IF (
  NOT(ISBLANK(sked_Requesting_Staff_NCE__r.sked_Activity_Title__c)),
  sked_Requesting_Staff_NCE__r.sked_Activity_Title__c,
  sked_Requesting_Staff_NCE__r.Name
 ),
&#39;Available Day&#39;, &#39;Available Day&#39;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Staff Trading Event Name</label>
    <type>Text</type>
</CustomField>