unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_TT_To_After_Trade__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_TT_To_After_Trade__c</fullName>
    <label>Requesting Staff TT To After Trade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>