unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Requesting_Staff_TTBack_AfterTrade__c.field-meta.xml
<CustomField>
    <fullName>sked_Requesting_Staff_TTBack_AfterTrade__c</fullName>
    <label>Requesting Staff TT Back After Trade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>