unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_RequestingStaffScheduledHoursAfter__c.field-meta.xml
<CustomField>
    <fullName>sked_RequestingStaffScheduledHoursAfter__c</fullName>
    <label>Requesting Staff Scheduled Hours After</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>