unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_RequestingStaffTravelDistanceAfter__c.field-meta.xml
<CustomField>
    <fullName>sked_RequestingStaffTravelDistanceAfter__c</fullName>
    <label>Requesting Staff Travel Distance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>