unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trade_Requester_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Trade_Requester_Notes__c</fullName>
    <label>Trade Requester Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>