unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_District__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_District__c</fullName>
    <formula>sked_Trading_Staff__r.sked_District_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff District</label>
    <type>Text</type>
</CustomField>