unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Drive_Date__c</fullName>
    <label>Trading Staff Drive Date</label>
    <type>Date</type>
</CustomField>