unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Drive_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Drive_ID__c</fullName>
    <formula>sked_Trading_Staff_Drive__r.sked_UFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff Drive ID</label>
    <type>Text</type>
</CustomField>