unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Drive_Name__c</fullName>
    <label>Trading Staff Drive Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>