unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Drive_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Staff Drive Shift</label>
    <referenceTo>sked_Drive_Shift__c</referenceTo>
    <relationshipLabel>Drive Shift Trades (Trading Staff Drive Shift)</relationshipLabel>
    <relationshipName>sked_Drive_Shift_Trades2</relationshipName>
    <type>Lookup</type>
</CustomField>