unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Event_Start_Time__c</fullName>
    <formula>IF( ISPICKVAL(sked_Trading_Staff_Trading_Type__c, &#39;Drive Shift&#39;), 
sked_Trading_Staff_Drive__r.sked_Start_Time__c,
sked_Trading_Staff_NCE__r.sked_Start_Time__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff Event Start Time</label>
    <type>Time</type>
</CustomField>