unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Job_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Job_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Staff Job Allocation</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipLabel>Drive Shift Trades (Trading Staff Job Allocation)</relationshipLabel>
    <relationshipName>sked_Drive_Shift_Trades2</relationshipName>
    <type>Lookup</type>
</CustomField>