unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_NCE__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_NCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Staff NCE</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Drive Shift Trades (Trading Staff NCE)</relationshipLabel>
    <relationshipName>sked_Drive_Shift_Trades2</relationshipName>
    <type>Lookup</type>
</CustomField>