unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_NCE_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_NCE_Type__c</fullName>
    <formula>TEXT(sked_Trading_Staff_NCE__r.sked__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff NCE Type</label>
    <type>Text</type>
</CustomField>