unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Overnight__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Overnight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trading Staff Overnight</label>
    <type>Checkbox</type>
</CustomField>