unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Relocated__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Relocated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>.</description>
    <label>Trading Staff Relocated</label>
    <type>Checkbox</type>
</CustomField>