unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Role_on_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Role_on_Drive__c</fullName>
    <label>Trading Staff Role on Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>