unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Trading_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Trading_Event_Date__c</fullName>
    <formula>CASE(TEXT(sked_Trading_Staff_Trading_Type__c),
&#39;Drive Shift&#39;, sked_Trading_Staff_Drive__r.sked_Drive_Date__c,
&#39;Activity&#39;, sked_Trading_Staff_NCE__r.sked_Start_Date__c,
&#39;Available Day&#39;, sked_Trading_Staff_Trading_Avail_Date__c,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff Trading Event Date</label>
    <type>Date</type>
</CustomField>