unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Trading_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Trading_Event_Name__c</fullName>
    <formula>IF( ISPICKVAL(sked_Trading_Staff_Trading_Type__c, &#39;Drive Shift&#39;),  
sked_Trading_Staff_Drive_Name__c, 
sked_Trading_Staff_NCE__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Staff Trading Event Name</label>
    <type>Text</type>
</CustomField>