unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_Trading_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_Trading_Type__c</fullName>
    <label>Trading Staff Trading Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive Shift</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
                <isActive>false</isActive>
                <label>On Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>