unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_Trading_Staff_TT_Back_Before_Trade__c.field-meta.xml
<CustomField>
    <fullName>sked_Trading_Staff_TT_Back_Before_Trade__c</fullName>
    <label>Trading Staff TT Back Before Trade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>