unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_TradingStaff_Scheduled_Hours_Before__c.field-meta.xml
<CustomField>
    <fullName>sked_TradingStaff_Scheduled_Hours_Before__c</fullName>
    <label>Trading Staff Scheduled Hours Before</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>