unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/fields/sked_TradingStaffTravelDistanceBefore__c.field-meta.xml
<CustomField>
    <fullName>sked_TradingStaffTravelDistanceBefore__c</fullName>
    <label>Trading Staff Travel Distance Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>