unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/validationRules/DeniedReasonIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DeniedReasonIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked_Status__c,&#39;Denied&#39;)
&amp;&amp; ISPICKVAL(sked_Denied_Reason__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Denied Reason is required.</errorMessage>
</ValidationRule>