unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/validationRules/RejectReasonIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RejectReasonIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked_Status__c,&#39;Rejected&#39;)
&amp;&amp; ISPICKVAL(sked_Reject_Reason__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Reject Reason is required.</errorMessage>
</ValidationRule>