unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Adrian_MI_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Adrian_MI_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Adrian MI: DSTs</label>
    <queue>Adrian_MI_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>