unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Alameda_CA_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Alameda_CA_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Alameda CA: DSTs</label>
    <queue>Alameda_CA_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>