unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Requesting_Staff_Drive_Name__c</columns>
    <columns>sked_Requesting_Staff_Drive__c</columns>
    <columns>sked_Status__c</columns>
    <columns>sked_Trading_Staff_Drive_Name__c</columns>
    <columns>sked_Trading_Staff_Drive__c</columns>
    <columns>sked_Reason_Approval_Required__c</columns>
    <columns>sked_APS_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>