unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Arlington_TX_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Arlington_TX_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Arlington TX: DSTs</label>
    <queue>Arlington_TX_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>