unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Asheville_NC_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Asheville_NC_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Asheville NC: DSTs</label>
    <queue>Asheville_NC_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>