unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Atlanta_GA_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Atlanta_GA_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Atlanta GA: DSTs</label>
    <queue>Atlanta_GA_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>