unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Baltimore_MD_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Baltimore_MD_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Baltimore MD: DSTs</label>
    <queue>Baltimore_MD_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>