unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Bangor_ME_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Bangor_ME_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Bangor ME: DSTs</label>
    <queue>Bangor_ME_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>