unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Beaver_PA_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Beaver_PA_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Beaver PA: DSTs</label>
    <queue>Beaver_PA_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>