unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Beckley_WV_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Beckley_WV_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Beckley WV: DSTs</label>
    <queue>Beckley_WV_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>