unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Bend_OR_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Bend_OR_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Bend OR: DSTs</label>
    <queue>Bend_OR_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>