unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Birmingham_AL_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Birmingham_AL_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Birmingham AL: DSTs</label>
    <queue>Birmingham_AL_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>