unpackaged/main/default/objects/sked_Drive_Shift_Trade__c/listViews/Boise_ID_DSTs_sked_Drive_Shift_Trade.listView-meta.xml
<ListView>
    <fullName>Boise_ID_DSTs_sked_Drive_Shift_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Boise ID: DSTs</label>
    <queue>Boise_ID_DSTs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>